# crown_file_processing

./: .gitignore  Dockerfile  Dockerfile.postgres  README.md  app.py  constant.py  constants.py  docker-compose.dev.yml  main.py  pyproject.toml  settings.py
app/: main.py  routes.py
app/apis/depends/: __init__.py  check_auth.py  get_session.py
app/apis/endpoints/: __init__.py  auth_endpoint.py  opa_endpoints.py  users_endpoints.py
app/core/: __init__.py  database.py  logger.py  settings.py
app/crud/: __init__.py  base_crud.py  user_crud.py
app/models/: BaseModel.py  User.py  __init__.py  users_model.py
app/opa/: __init__.py  create_opa_bundle.py
app/opa/permissions/: __init__.py  base_permissions.py  users_permissions.py
app/opa/rules/: user.rego  utils.rego
app/schemas/: __init__.py  response_shema.py  user_schema.py
app/services/: __init__.py  auth_service.py  users_service.py
app/utils/: __init__.py  decorator.py  email_util.py  generate_verify_code_util.py  jwt_util.py  list_util.py  misc.py
migrations/: env.py
migrations/versions/: b3551dec0943_create_users_table.py  e90aaa350505_create_table_user.py
pg_init_scripts/: create_extension.sh  start_pg_agent.sh
postgres_data/: postmaster.pid
postgres_data/base/5/: pg_internal.init
postgres_data/global/: 2397  2671  2672  2694  2695  6302  6303  pg_control  pg_internal.init
postgres_data/pg_stat/: pgstat.stat
